--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Terraform Plan
         working-directory: ${{ env.WORKING_DIR }}
-        run: terraform plan -out=tfplan
+        run: terraform plan -var="key_name=my-terraform-key" -out=tfplan
 
       - name: Terraform Apply
         working-directory: ${{ env.WORKING_DIR }}
