feat: update infrastructure for us-east-1 region
- Update availability zones to us-east-1a and us-east-1b
- Configure region to us-east-1
- Update terraform.tfvars with new region settings

--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -2,13 +2,6 @@
 name: 'Terraform Plan'
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'modules/**'
-      - 'environments/**'
-      - '.github/workflows/terraform-plan.yml'
   pull_request:
     branches:
       - main
@@ -66,7 +59,7 @@ jobs:
         id: plan
         working-directory: ${{ env.WORKING_DIR }}
         run: |
-          terraform plan -no-color -out=tfplan
+          terraform plan -no-color -var="key_name=my-terraform-key" -out=tfplan
           terraform show -no-color tfplan > plan.txt
         continue-on-error: true
 
