--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -1,4 +1,3 @@
-# File: .github/workflows/terraform-apply.yml
 name: 'Terraform Apply'
 
 on:
@@ -46,7 +45,7 @@ jobs:
 
       - name: Terraform Plan
         working-directory: ${{ env.WORKING_DIR }}
-        run: terraform plan -var="key_name=my-terraform-key" -out=tfplan
+        run: terraform plan -out=tfplan
 
       - name: Terraform Apply
         working-directory: ${{ env.WORKING_DIR }}
