--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -59,7 +59,7 @@ jobs:
         working-directory: ${{ env.WORKING_DIR }}
         run: |
           terraform plan -no-color -out=tfplan
-          terraform show -no-color tfplan > plan.txt
+          terraform show -no-color tvar="key_name=my-terraform-key" -fplan > plan.txt
         continue-on-error: true
 
       - name: Upload Plan
