--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'modules/**'
       - 'environments/**'
+      - '.github/workflows/terraform-apply.yml'
   workflow_dispatch:
 
 permissions:
